# JS8Call-improved

./: .clang-format  .gitignore  APRSISClient.cpp  APRSISClient.h  APRSISClient_8h_source.html  AttenuationSlider.cpp  AttenuationSlider_8hpp_source.html  AudioDevice_8hpp_source.html  Bands_8hpp_source.html  CMakeCPackOptions.cmake.in  CMakeLists.txt  CMakeLists.txt.legacy  CallsignValidator_8hpp_source.html  CandidateKeyFilter_8hpp_source.html  Configuration.cpp  Configuration.hpp  Configuration.ui  Configuration_8hpp_source.html  DXLabSuiteCommanderTransceiver.cpp  DXLabSuiteCommanderTransceiver_8hpp_source.html  Decoder.cpp  Decoder.h  Decoder_8h_source.html  Detector.cpp  Detector.hpp  Detector_8hpp_source.html  DisplayManual.cpp  DisplayManual_8hpp_source.html  Doxyfile  DriftingDateTime.cpp  DriftingDateTime.h  DriftingDateTime_8h_source.html  EmulateSplitTransceiver.cpp  EmulateSplitTransceiver_8hpp_source.html  EventFilter_8hpp_source.html  Flatten.cpp  Flatten_8hpp_source.html  ForeignKeyDelegate_8hpp_source.html  FrequencyLineEdit_8hpp_source.html  FrequencyList_8hpp_source.html  (+774 more)
.github/workflows/: build-caches.yml  build-docs.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  mark-stale.yml  release-macos.yml  release.yml
CMake/Modules/: FindFFTW3.cmake  NSIS.template.in  QtAxMacros.cmake  VersionCompute.cmake
Darwin/: Entitlements.plist  Info.plist.in
artwork/: make_graphics.sh
docker/: README.md  docker-build-instructions.md  docker-build.sh  docker-run.sh
docs/: BUILD-Linux.md  BUILD-MacOS.md  BUILD-Windows.md  CONTRIBUTOR_GUIDE.md  build_for_Linux.md  build_for_MacOS.md  build_for_Windows.md
logbook/: adif.cpp  adif.h  countriesworked.cpp  countriesworked.h  countrydat.cpp  countrydat.h
media/tests/: README  test
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+23 more)
